# TrenerAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_SELFMADE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  seed_database.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_roles_and_groups.py
app/: agent.py  chat_commands.py  command_executor.py  intent_parser.py  main.py
app/api/: __init__.py  auth.py  chat.py  clients.py  feedback.py  invitations.py  trainer.py  trainings.py  users.py  workouts.py
app/commands/: __init__.py  executor.py  parser.py  session.py  types.py
app/core/: __init__.py
app/database/: __init__.py  connection.py  models.py
app/models/: exercise.py
app/schemas/: __init__.py
app/services/: __init__.py  auth_service.py  chat_service.py
app/storage/: __init__.py
data/: exercises.json
data/qdrant/: nutrition.json  programs.json  techniques.json
docs/: 00_architecture.md  02_models_exercise_py.md  03_exercises_json.md  04_seed_database_py.md  05_agent_py.md  06_main_py.md  07_configuration.md  08_flow_complete.md
docs/01_concepts/: 01_what_is_embedding.md  02_what_is_vector_db.md  03_what_is_langgraph.md  04_what_is_rag.md  05_what_is_pydantic.md
frontend/: .env.example  App.tsx  INSTRUKCJA.md  PORADNIK_KOMPLETNY.md  README.md  backendService.ts  capacitor.config.json  geminiService.ts  index.html  metadata.json  package-lock.json  package.json  pubspec.yaml  types.ts
frontend/components/: CalendarView.tsx  (+4 more)
scripts/: load_qdrant_collections.py  test_api.py
(+46 files in other folders)
