[project]
name = "trenerai"
version = "0.1.0"
description = "AI-powered training plan generator for fitness trainers using LangGraph and Qdrant"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "qdrant-client>=1.9.0",
    "fastembed>=0.3.0",
    "langchain>=0.2.5",
    "langchain-core>=0.2.9",
    "langchain-community>=0.2.5",
    "langchain-openai>=0.1.8",
    "langchain-qdrant>=0.1.1",
    "langgraph>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
